fixed image modal spill over

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -17,8 +17,8 @@ body {
   margin: auto;
 }
 
-header{
-    padding-bottom: 1vh;
+header {
+  padding-bottom: 1vh;
 }
 
 .MuiPagination-ul > li > * {
@@ -56,7 +56,7 @@ header{
   #home-grid > div,
   #home-grid > div > div > div {
     max-width: 100% !important;
-    width: 80vw
+    width: 80vw;
   }
 }
 
@@ -90,13 +90,13 @@ div.MuiBox-root.css-18m5ng9 {
   z-index: 2;
 }
 
-button.MuiTab-root[aria-selected = 'true']{
+button.MuiTab-root[aria-selected="true"] {
   border-bottom: 2px solid red !important;
   color: rgba(0, 0, 0, 0.6);
 }
 
 @media (max-width: 1000px) {
-li.MuiImageListItem-root{
-  grid-column-end: span 2 !important;
-}
+  li.MuiImageListItem-root {
+    grid-column-end: span 2 !important;
+  }
 }
